k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-catolog-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-catalog
  template:
    metadata:
      labels:
        app: bookstore-catalog
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics/"
    spec:
      containers:
        - image: jasakerec/bookstore-catalog:latest
          name: bookstore-catalog
          ports:
            - containerPort: 8080
              name: server
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: bookstore-catalog
spec:
  type: ClusterIP
  ports:
    - port: 8080 # The port on which the service will be exposed
      protocol: TCP
      targetPort: 8080 # The port on which the FastAPI app is running in the container
  selector:
    app: bookstore-catalog
